# primegen-experiments

./: .gitignore  README.md
DimaT/: next_prime32.h  next_prime64.h  primegen.cpp
mayton/Factorize-x64/: CMakeLists.txt  sonar-project.properties
mayton/Factorize-x64/src/: factorize.cpp
mayton/PBFA-x64/: README.md  sonar-project.properties
mayton/PBFA-x64/src/: pbfa64-gen.cpp  pbfa64.cpp  primes-interval.cpp
mayton/Research/PrimeHistogram/: pom.xml
mayton/Research/PrimeUnitTesting/: prime.java
mayton/Research/TestProbabalistic/: build.gradle  settings.gradle
mayton/Research/TestProbabalistic/gradle/wrapper/: gradle-wrapper.properties
mayton/Utils/src/: fibgen.cpp  gcd.cpp  permutate.cpp  pyfagor.cpp  seq.cpp
mayton/mtn-primelib/: build.sbt
mayton/mtn-primelib/src/main/prolog/: 8queens-01.prolog  8queens-02.prolog  einstein-01.prolog
mayton/mtn-primelib/src/main/scala/mayton/primes/: EulerSpace.scala  Main.scala  PrimeLib.scala  PrimeSpace.scala  PrimeTests.scala  (+2 more)
mayton/mtn-tinyasm/: README.md  pom.xml
mayton/mtn-tinyasm/c/: compile.sh  gcd-lcm.c  gcd-lcm.h  gcd-lcm.o-disassemble.txt  gcd-lcm.o-dump.txt  gcd-lcm.o-readelf.txt  gcd-lcm.o-symboltable.txt  gcd-lcm.s  libgcd-lcm.so-disassemble.txt  libgcd-lcm.so-dump.txt  libgcd-lcm.so-readelf.txt  libgcd-lcm.so-symboltable.txt  main.c
mayton/mtn-tinyasm/src/main/resources/: FPU.yaml  JNI-types.yaml  MMX.yaml  SSE.yaml  logback.xml
mayton/mtn-tinyasm/src/main/resources/asm/: FPU.yaml  GeneralPuprose.yaml
mayton/scala-prime/: build.sbt
mayton/scala-prime/src/main/scala/mayton/: Main.scala
(+59 files in other folders)
